# TreeFlix

./: MOVIES.js  index.html  script.js  style.css
backend/: Cargo.toml
backend/src/: main.rs
data/: Cargo.toml  movies_ptbr.csv
data/src/: main.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  types.ts
frontend/src/components/: HoverRating.tsx  MovieDetailsModal.tsx  MovieItem.tsx  MovieList.tsx  SearchForm.tsx
frontend/src/utils/: api.ts
