[package]
name = "data"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
reqwest = { version = "0.12.22", features = ["json", "gzip"] }
rust_decimal = { version = "1.37.2", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
